test/library/standard/Sort/errors/sortDomainArray.rect1.good
sortDomainArray.chpl:65: error: sort() is not supported on domains
